# pixson

./: README.md  pyproject.toml
contas/: 0000000000.json  1111111111.json  2222222222.json  4444444444.json
pixson/: cliente.py  protocolo.py  servidor.py
pixson/recursos/: conta.py  protocolo.py
